Revision history for Spreadsheet-HTML

0.12

0.11
    - added 'empty' attribute
    - added 'headings' attribute
    - added XLS loading

0.10
    - using HTML::Element in process now()
    - caching working
    - lots of refactoring
    - fixed more "breaks the dist" tests

0.09
    - fixed manifest (left out test data dir)
    - finished Spreadsheet:HTML::CSV

0.08
    - added flip and mirror
    - added data caching
    - using Clone to prevent data from being clobbered
    - major refactor of internals (interface unchanged)
    - more modular and flexible

0.07
    - added matrix attr (plain headings)
    - added portrait and landscape aliases
    - encode attr correctly accepts undef now
      (allows HTML::Element to encode all unsafe chars)

0.06    
    - using HTML::Element
    - H::E handles encoding and indention
    - refactored arg handling
    - added table attrs
    - corrected license ref
    - TODO: make th and td attrs non-global 

0.05    Corrected build and unit testing

0.04    Temporarily allowing DBIx::HTML to subclass.

0.03    Major refactoring, able to transpose.

0.02    First version, released on an unsuspecting world.
